apollo-router/src/spec/query/snapshots/uhg_custom_appollo_roouter__spec__query__transform__tests__remove_directive-2.snap
---
source: apollo-router/src/spec/query/transform.rs
assertion_line: 790
expression: "TestResult { query, result }"
---
query:

            query($a: String) {
                a(arg: $a) @remove
                c
            }
filtered:
{
  c
}
