apollo-router/src/spec/query/snapshots/uhg_custom_appollo_roouter__spec__query__transform__tests__remove_directive-5.snap
---
source: apollo-router/src/spec/query/transform.rs
assertion_line: 837
expression: "TestResult { query, result }"
---
query:

            query($a: String) {
                ... F @remove
                c
            }

            fragment F on Query {
                ... G
            }

            fragment G on Query {
                a(arg: $a)
            }
            
filtered:
{
  c
}
