apollo-router/src/spec/query/snapshots/uhg_custom_appollo_roouter__spec__query__transform__tests__remove_directive-7.snap
---
source: apollo-router/src/spec/query/transform.rs
assertion_line: 868
expression: "TestResult { query, result }"
---
query:

            query($a: String, $b: String) {
                c
                d(arg: ["a", $a, "b"]) @remove
                aliased: d(arg: [$b])
            }
            
filtered:
query($b: String) {
  c
  aliased: d(arg: [$b])
}
