apollo-router/src/spec/query/snapshots/uhg_custom_appollo_roouter__spec__query__transform__tests__remove_directive.snap
---
source: apollo-router/src/spec/query/transform.rs
assertion_line: 780
expression: "TestResult { query, result }"
---
query:

            query {
                a
               ... F @remove
            }

            fragment F on Query {
                b {
                    a
                }
            }
filtered:
{
  a
}
